--- a/templates/facture/index.html.twig
+++ b/templates/facture/index.html.twig
@@ -3,8 +3,8 @@
 {% block title %}Conge index{% endblock %}
 
 {% block body %}
-    <h1>Liste des Factures</h1>
-
+    <h1 style="text-align: center;">Liste des Factures</h1>
+<hr/>
     <table border=2,class="table">
         <thead>
             <tr>
@@ -39,6 +39,8 @@
                      <a class="dropdown-item" href="{{ path('app_facture_addline', {'id': facture.id}) }}"><span class="fa fa-edit text-primary"></span> Modifier</a>
                     <div class="dropdown-divider"></div>
                     {{ include('facture/_delete_form.html.twig') }}
+                     <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="{{ path('send_facture_email', {'id': facture.id}) }}"><span class="fa fa-edit text-primary"></span> Envoyer</a>
          
          
      </div>
