travail fini sauf vérification paiement

--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -45,6 +45,7 @@
           <li ><a href="{{ path('app_facture_new') }}">Nouveau</a></li>
           <li ><a href="{{ path('app_facture_index') }}">Synthèse</a></li>
           <li ><a href="{{ path('app_factureimpayee_index') }}">Non Payées</a></li>
+          <li ><a href="{{ path('app_facturepayee_index') }}">Payées</a></li>
           
         </ul>
       </nav><!-- .nav-menu -->
