--- a/templates/facture/indexpayee.html.twig
+++ b/templates/facture/indexpayee.html.twig
@@ -3,17 +3,16 @@
 {% block title %}Conge index{% endblock %}
 
 {% block body %}
-    <h1 style="text-align: center;">Liste des Factures</h1>
-<hr/>
+    <h1>Liste des Factures</h1>
+
     <table border=2,class="table">
         <thead>
             <tr>
                 <th>N° Facture</th>
-                <th>Date de Facturation</th>
                 <th>Client</th>
-                <th>HT</th>
+                <th>Date Facture    </th>
                 <th>TTC</th>
-                <th>ETAT</th>
+                <th>Echéance</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -21,32 +20,11 @@
         {% for facture in factures %}
             <tr>
                 <td>{{ facture.numFacture }}</td>
-                <td>{{ facture.dateFacturation ? facture.dateFacturation|date('Y-m-d') : '' }}</td>
+                
                 <td>{{ facture.client.nom}}</td>
-                <td>{{ (facture.totalTTC - facture.totaltaxe)|number_format(2, ',', ',')}}</td>
+                <td>{{ facture.dateFacturation ? facture.dateFacturation|date('Y-m-d') : '' }}</td>
                 <td>{{ facture.totalTTC|number_format(2, ',', ',')}}</td>
-   <td>
-    {% set badgeClass = '' %}
-    {% set iconClass = '' %}
-    {% if facture.etat == 'ouvert' %}
-        {% set badgeClass = 'badge-success' %}
-        {% set iconClass = 'fas fa-lock-open' %}
-    {% elseif facture.etat == 'envoyée' %}
-        {% set badgeClass = 'badge-warning' %}
-        {% set iconClass = 'fa-solid fa-bars-progress' %}
-    {% elseif facture.etat == 'payée' %}
-        {% set badgeClass = 'badge-primary' %}
-        {% set iconClass = 'far fa-handshake' %}
-    {% elseif facture.etat == 'non-payée' %}
-        {% set badgeClass = 'badge-danger' %}
-        {% set iconClass = 'far fa-handshake' %}
-    {% endif %}
-    <span class="badge {{ badgeClass }}">
-        <i class="{{ iconClass }}"></i> {{ facture.etat }}
-    </span>
-</td>
-
-
+                <td>{{ facture.dateEcheance ? facture.dateEcheance|date('Y-m-d') : '' }}</td>
               
                  <td align="center">
      <button type="button" class="btn btn-default btn-sm dropdown-toggle dropdown-icon" data-toggle="dropdown">
@@ -60,8 +38,6 @@
                      <a class="dropdown-item" href="{{ path('app_facture_addline', {'id': facture.id}) }}"><span class="fa fa-edit text-primary"></span> Modifier</a>
                     <div class="dropdown-divider"></div>
                     {{ include('facture/_delete_form.html.twig') }}
-                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{{ path('send_facture_email', {'id': facture.id}) }}"><span class="fa fa-edit text-primary"></span> Envoyer</a>
          
          
      </div>
