mise à jour avant check

--- a/templates/facture/efactur-x.html.twig
+++ b/templates/facture/efactur-x.html.twig
@@ -53,7 +53,7 @@
                                     </td>
                                  </tr>
                               </table>
-                              <p style="font-weight:bold;margin:0;">Contrat N° 01-112022 / Avenant 01/2022</p>
+                              <p style="font-weight:bold;margin:0;">Contrat N°{{ facture.client.contrat }}</p>
                               <p style="font-weight:bold;margin:0;">Prestataire: IT STORM Consulting</p>
                            </div>
                         </td>
