--- a/templates/facture/show.html.twig
+++ b/templates/facture/show.html.twig
@@ -39,7 +39,7 @@
                     <span >Destinataire: {{ facture.client.nom }}</span><br/>
                     <span style=" margin-left: 81px;">{{ facture.client.adresse }}</span>
                 </p>
-                <p style="margin:0;text-align:left;font-weight:bold;">Contrat N° 01-112022 / Avenant 01/2022</p>
+                <p style="margin:0;text-align:left;font-weight:bold;">Contrat N° {{ facture.client.contrat }}</p>
                 <p style="margin:0;text-align:left;font-weight:bold;">Prestataire: IT STORM Consulting</p>
             </div>
         </div>
