--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -26,6 +26,7 @@
 {% endblock %}
   <!-- Template Main CSS File -->
   <link href="{{asset("css/style.css")}}" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 
 </head>
