--- a/templates/facture/efacture.html.twig
+++ b/templates/facture/efacture.html.twig
@@ -52,7 +52,7 @@
                     </tr>
                 </table>
 
-                <p style="font-weight:bold;margin:0;">Contrat N° 01-112022 / Avenant 01/2022</p>
+                <p style="font-weight:bold;margin:0;">Contrat N°{{ facture.client.contrat }}</p>
                 <p style="font-weight:bold;margin:0;">Prestataire: IT STORM Consulting</p>
             </div>
         </td>
