--- a/templates/facture/efacture.html.twig
+++ b/templates/facture/efacture.html.twig
@@ -85,8 +85,8 @@
             <tr>
                 <td style="padding: 5px;">{{ ligneFacture.description }}</td>
                 <td style="text-align:center;">{{ ligneFacture.nbJours|number_format(1, ',', ',') }}</td>
-                <td style="text-align:center;">{{ ligneFacture.prixUnitaire|number_format(2, ',', ',') }}</td>
-                <td style="text-align:center;">{{ ligneFacture.montantTotalHT|number_format(2, ',', ',') }}</td>
+                <td style="text-align:center;">{{ ligneFacture.prixUnitaire|number_format(2, ',', ' ') }}</td>
+                <td style="text-align:center;">{{ ligneFacture.montantTotalHT|number_format(2, ',', ' ') }}</td>
             </tr>
         {% endfor %}
       </tbody>
@@ -102,16 +102,16 @@
         <table style="border-collapse: collapse;">
             <tr>
                 <td style="padding: 5px; border: none;">Sous-total HT :</td>
-                <td style="padding: 5px; font-weight: bold; border: none;">{{ facture.totalTTC|number_format(2, ',', ',') }}</td>
+                <td style="padding: 5px; font-weight: bold; border: none;">{{ facture.totalTTC|number_format(2, ',', ' ') }}</td>
             </tr>
             <tr>
                 <td style="padding: 5px; border: none;">TVA % :</td>
-                <td style="padding: 5px; font-weight: bold; border: none;">{{ facture.totaltaxe|number_format(2, ',', ',') }}</td>
+                <td style="padding: 5px; font-weight: bold; border: none;">{{ facture.totaltaxe|number_format(2, ',', ' ') }}</td>
             </tr>
 
             <tr style="border-block-end: ridge;">
                 <td style="padding: 5px; border: none;">Montant Total TTC :</td>
-                <td style="padding: 5px; font-weight: bold; ">{{ facture.totalTTC|number_format(2, ',', ',') }}</td>
+                <td style="padding: 5px; font-weight: bold; ">{{ facture.totalTTC|number_format(2, ',', ' ') }}</td>
             </tr>
             <tr>
                 <td style="padding: 5px; border: none;">Montant Payé :</td>
@@ -119,7 +119,7 @@
             </tr>
             <tr style="background-color: aquamarine;">
                 <td style="padding: 5px; border: none;">Montant à Payer (EUR) :</td>
-                <td style="padding: 5px; font-weight: bold; border: none;">{{ facture.totalTTC|number_format(2, ',', ',') }}</td>
+                <td style="padding: 5px; font-weight: bold; border: none;">{{ facture.totalTTC|number_format(2, ',', ' ') }}</td>
             </tr>
         </table>
     </div>
