--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -69,7 +69,7 @@
   </section><!-- End Hero -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  {# <footer id="footer">
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>Med Cherif</span></strong>. All Rights Reserved
@@ -78,7 +78,7 @@
         Designed by <a href="https://bootstrapmade.com/">Leaders</a>
       </div>
     </div>
-  </footer><!-- End Footer -->
+  </footer><!-- End Footer --> #}
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top"><i class="bx bx-up-arrow-alt"></i></a>
