--- a/templates/ligne_facture/_form.html.twig
+++ b/templates/ligne_facture/_form.html.twig
@@ -88,7 +88,7 @@
     </div>
 </div>
 
-{{ form_end(form) }}
+
 
 
 <table class="table table-striped" id="ligneFactureTable">
@@ -121,11 +121,30 @@
 
     </tbody>
 </table>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<hr/>
+<a class="btn btn-secondary" href="{{ path('app_facture_index') }}"><i class="fas fa-arrow-left"></i> Retour</a>                        
+{# <a class="btn btn-primary" href="{{ path('send_facturx_email', {'id': lfacture.id}) }}"><i class="fas fa-file-invoice"></i> Envoyer factur-x</a> #}
+<a class="btn btn-primary" href="{{ path('upload_pdf', {'id': lfacture.id}) }}"><i class="fas fa-check"></i> Vérifier paiement</a>
+<a class="btn btn-success" href="{{ path('send_facture_email', {'id': lfacture.id}) }}"><i class="fas fa-paper-plane"></i> Envoyer</a>
 
+ 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+{{ form_end(form) }}
 
 <script>
 
+// $(function () {
+//     $("#ligneFactureTable").DataTable({
+//         "responsive": true,
+//         "lengthChange": false,
+//         "autoWidth": false,
+//         "searching": false,
+//         "info": false,
+//         "bPaginate": false,
+//         "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+//     }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+
+// });
     function addline() {
         $.ajax({
             type: 'POST',
