--- a/templates/pdf/upload.html.twig
+++ b/templates/pdf/upload.html.twig
@@ -5,10 +5,25 @@
 {% block title %}Télécharger un fichier PDF{% endblock %}
 
 {% block body %}
-    <h1>Télécharger un fichier PDF</h1>
 
-    {{ form_start(form) }}
-    {{ form_row(form.pdfFile) }}
-    <button type="submit" class="btn btn-primary">Télécharger</button>
-    {{ form_end(form) }}
+{% for message in app.flashes('error') %}
+    <div class="alert alert-danger">
+        {{ message }}
+    </div>
+{% endfor %}
+
+<h1>Télécharger un fichier PDF</h1>
+
+{{ form_start(form) }}
+{{ form_row(form.pdfFile) }}
+
+<div class="form-check">
+    <input class="form-check-input" type="checkbox" value="1" id="allFactures" name="allFactures">
+    <label class="form-check-label" for="allFactures">
+        Traiter toutes les factures non-payées et envoyées
+    </label>
+</div>
+
+<button type="submit" class="btn btn-primary">Vérifier</button>
+{{ form_end(form) }}
 {% endblock %}
